Reran ngrams with only fomc members

--- a/ngrams/common_ngrams.ipynb
+++ b/ngrams/common_ngrams.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,16 +25,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tdf = pd.read_csv('../working-csvs/raw_transcripts_sectioned.csv')"
+    "tdf = pd.read_csv('../working-csvs/fomc_sectioned.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>speaker</th>\n",
+       "      <th>content</th>\n",
+       "      <th>index</th>\n",
+       "      <th>date</th>\n",
+       "      <th>type</th>\n",
+       "      <th>section</th>\n",
+       "      <th>lname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CHAIRMAN GREENSPAN.</td>\n",
+       "      <td>I want to note that revisions, if any, on the ...</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1994-02-04</td>\n",
+       "      <td>meeting</td>\n",
+       "      <td>1</td>\n",
+       "      <td>greenspan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MR. LINDSEY.</td>\n",
+       "      <td>I have two questions. The first has to do with...</td>\n",
+       "      <td>73</td>\n",
+       "      <td>1994-02-04</td>\n",
+       "      <td>meeting</td>\n",
+       "      <td>1</td>\n",
+       "      <td>lindsey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MR. LINDSEY.</td>\n",
+       "      <td>Could I get a copy of that breakdown?</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1994-02-04</td>\n",
+       "      <td>meeting</td>\n",
+       "      <td>1</td>\n",
+       "      <td>lindsey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MR. LINDSEY.</td>\n",
+       "      <td>Horrors!</td>\n",
+       "      <td>77</td>\n",
+       "      <td>1994-02-04</td>\n",
+       "      <td>meeting</td>\n",
+       "      <td>1</td>\n",
+       "      <td>lindsey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CHAIRMAN GREENSPAN.</td>\n",
+       "      <td>This is known as the statistical sausage factory!</td>\n",
+       "      <td>78</td>\n",
+       "      <td>1994-02-04</td>\n",
+       "      <td>meeting</td>\n",
+       "      <td>1</td>\n",
+       "      <td>greenspan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25987</th>\n",
+       "      <td>MR. QUARLES.</td>\n",
+       "      <td>Thank you, Mr. Chairman.  I support today's pr...</td>\n",
+       "      <td>246</td>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>meeting</td>\n",
+       "      <td>2</td>\n",
+       "      <td>quarles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25988</th>\n",
+       "      <td>CHAIRMAN POWELL.</td>\n",
+       "      <td>Thank you.  President Kashkari.</td>\n",
+       "      <td>247</td>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>meeting</td>\n",
+       "      <td>2</td>\n",
+       "      <td>powell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25989</th>\n",
+       "      <td>MR. KASHKARI.</td>\n",
+       "      <td>Thank you, Mr. Chairman.  If I might, I wanted...</td>\n",
+       "      <td>248</td>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>meeting</td>\n",
+       "      <td>2</td>\n",
+       "      <td>kashkari</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25990</th>\n",
+       "      <td>CHAIRMAN POWELL.</td>\n",
+       "      <td>Thank you.  Vice Chair Williams.</td>\n",
+       "      <td>249</td>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>meeting</td>\n",
+       "      <td>2</td>\n",
+       "      <td>powell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25991</th>\n",
+       "      <td>CHAIRMAN POWELL.</td>\n",
+       "      <td>Thank you.  And thanks to everybody.  Particul...</td>\n",
+       "      <td>251</td>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>meeting</td>\n",
+       "      <td>2</td>\n",
+       "      <td>powell</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>25992 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   speaker                                            content  \\\n",
+       "0      CHAIRMAN GREENSPAN.  I want to note that revisions, if any, on the ...   \n",
+       "1             MR. LINDSEY.  I have two questions. The first has to do with...   \n",
+       "2             MR. LINDSEY.              Could I get a copy of that breakdown?   \n",
+       "3             MR. LINDSEY.                                           Horrors!   \n",
+       "4      CHAIRMAN GREENSPAN.  This is known as the statistical sausage factory!   \n",
+       "...                    ...                                                ...   \n",
+       "25987         MR. QUARLES.  Thank you, Mr. Chairman.  I support today's pr...   \n",
+       "25988     CHAIRMAN POWELL.                    Thank you.  President Kashkari.   \n",
+       "25989        MR. KASHKARI.  Thank you, Mr. Chairman.  If I might, I wanted...   \n",
+       "25990     CHAIRMAN POWELL.                   Thank you.  Vice Chair Williams.   \n",
+       "25991     CHAIRMAN POWELL.  Thank you.  And thanks to everybody.  Particul...   \n",
+       "\n",
+       "       index        date     type  section      lname  \n",
+       "0         72  1994-02-04  meeting        1  greenspan  \n",
+       "1         73  1994-02-04  meeting        1    lindsey  \n",
+       "2         75  1994-02-04  meeting        1    lindsey  \n",
+       "3         77  1994-02-04  meeting        1    lindsey  \n",
+       "4         78  1994-02-04  meeting        1  greenspan  \n",
+       "...      ...         ...      ...      ...        ...  \n",
+       "25987    246  2018-12-19  meeting        2    quarles  \n",
+       "25988    247  2018-12-19  meeting        2     powell  \n",
+       "25989    248  2018-12-19  meeting        2   kashkari  \n",
+       "25990    249  2018-12-19  meeting        2     powell  \n",
+       "25991    251  2018-12-19  meeting        2     powell  \n",
+       "\n",
+       "[25992 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
