Made sure to drop index before saving

--- a/stance-vectors/create_sents.ipynb
+++ b/stance-vectors/create_sents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "[260807 rows x 4 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sgs.reset_index(inplace=True, drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -340,13 +349,13 @@
        "[260807 rows x 4 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sgs.reset_index(drop=True)"
+    "sgs"
    ]
   },
   {
