Added indicator so I can omit observations informed by less than 3 sentences

--- a/stance-vectors/stance_vector.ipynb
+++ b/stance-vectors/stance_vector.ipynb
@@ -1001,260 +1001,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date_x</th>\n",
-       "      <th>section</th>\n",
-       "      <th>lname</th>\n",
-       "      <th>svect</th>\n",
-       "      <th>voter</th>\n",
-       "      <th>sent</th>\n",
-       "      <th>date_section_mean</th>\n",
-       "      <th>date_section_std</th>\n",
-       "      <th>norm_svect</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1994-02-04</td>\n",
-       "      <td>1</td>\n",
-       "      <td>boehne</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>[-0.20229081641970367, -0.3151150390251947, -0...</td>\n",
-       "      <td>[1.0949212859056963, 0.9475574203939641, 0.180...</td>\n",
-       "      <td>[0.1847537526429335, 0.3325550855737903, 0.141...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1994-02-04</td>\n",
-       "      <td>1</td>\n",
-       "      <td>broaddus</td>\n",
-       "      <td>[-0.09559456218574064, 1.3333333333333333, 0.0...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>[-0.20229081641970367, -0.3151150390251947, -0...</td>\n",
-       "      <td>[1.0949212859056963, 0.9475574203939641, 0.180...</td>\n",
-       "      <td>[0.09744650652736749, 1.7396817721855375, 0.14...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1994-02-04</td>\n",
-       "      <td>1</td>\n",
-       "      <td>forrestal</td>\n",
-       "      <td>[1.1557382475407931, 0.0, 0.2706530339997656, ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11</td>\n",
-       "      <td>[-0.20229081641970367, -0.3151150390251947, -0...</td>\n",
-       "      <td>[1.0949212859056963, 0.9475574203939641, 0.180...</td>\n",
-       "      <td>[1.2402983497002373, 0.3325550855737903, 1.638...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1994-02-04</td>\n",
-       "      <td>1</td>\n",
-       "      <td>hoenig</td>\n",
-       "      <td>[-0.40276034193397064, 0.4730077107282468, 0.0...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>[-0.20229081641970367, -0.3151150390251947, -0...</td>\n",
-       "      <td>[1.0949212859056963, 0.9475574203939641, 0.180...</td>\n",
-       "      <td>[-0.18309035370377583, 0.8317414151279248, 0.1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1994-02-04</td>\n",
-       "      <td>1</td>\n",
-       "      <td>jordan</td>\n",
-       "      <td>[0.0, -2.948044778664286, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>[-0.20229081641970367, -0.3151150390251947, -0...</td>\n",
-       "      <td>[1.0949212859056963, 0.9475574203939641, 0.180...</td>\n",
-       "      <td>[0.1847537526429335, -2.778649275464914, 0.141...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5880</th>\n",
-       "      <td>2018-12-19</td>\n",
-       "      <td>2</td>\n",
-       "      <td>kashkari</td>\n",
-       "      <td>[-0.3975757616807607, 0.0, 0.0, 0.0, -0.520186...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>[-0.006774948725900236, 0.0, 0.077411826324159...</td>\n",
-       "      <td>[0.13957653573688994, 0.0, 0.19901225947274961...</td>\n",
-       "      <td>[-2.7999033712338526, 0.0, -0.3889801891061880...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5881</th>\n",
-       "      <td>2018-12-19</td>\n",
-       "      <td>2</td>\n",
-       "      <td>mester</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0.0,...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>[-0.006774948725900236, 0.0, 0.077411826324159...</td>\n",
-       "      <td>[0.13957653573688994, 0.0, 0.19901225947274961...</td>\n",
-       "      <td>[0.04853930992148578, 0.0, -0.3889801891061880...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5882</th>\n",
-       "      <td>2018-12-19</td>\n",
-       "      <td>2</td>\n",
-       "      <td>powell</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[-0.006774948725900236, 0.0, 0.077411826324159...</td>\n",
-       "      <td>[0.13957653573688994, 0.0, 0.19901225947274961...</td>\n",
-       "      <td>[0.04853930992148578, 0.0, -0.3889801891061880...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5883</th>\n",
-       "      <td>2018-12-19</td>\n",
-       "      <td>2</td>\n",
-       "      <td>quarles</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0,...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[-0.006774948725900236, 0.0, 0.077411826324159...</td>\n",
-       "      <td>[0.13957653573688994, 0.0, 0.19901225947274961...</td>\n",
-       "      <td>[0.04853930992148578, 0.0, -0.3889801891061880...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5884</th>\n",
-       "      <td>2018-12-19</td>\n",
-       "      <td>2</td>\n",
-       "      <td>rosengren</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -0.72...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>[-0.006774948725900236, 0.0, 0.077411826324159...</td>\n",
-       "      <td>[0.13957653573688994, 0.0, 0.19901225947274961...</td>\n",
-       "      <td>[0.04853930992148578, 0.0, -0.3889801891061880...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5885 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          date_x  section      lname  \\\n",
-       "0     1994-02-04        1     boehne   \n",
-       "1     1994-02-04        1   broaddus   \n",
-       "2     1994-02-04        1  forrestal   \n",
-       "3     1994-02-04        1     hoenig   \n",
-       "4     1994-02-04        1     jordan   \n",
-       "...          ...      ...        ...   \n",
-       "5880  2018-12-19        2   kashkari   \n",
-       "5881  2018-12-19        2     mester   \n",
-       "5882  2018-12-19        2     powell   \n",
-       "5883  2018-12-19        2    quarles   \n",
-       "5884  2018-12-19        2  rosengren   \n",
-       "\n",
-       "                                                  svect  voter  sent  \\\n",
-       "0     [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...      0     3   \n",
-       "1     [-0.09559456218574064, 1.3333333333333333, 0.0...      1    12   \n",
-       "2     [1.1557382475407931, 0.0, 0.2706530339997656, ...      1    11   \n",
-       "3     [-0.40276034193397064, 0.4730077107282468, 0.0...      0     6   \n",
-       "4     [0.0, -2.948044778664286, 0.0, 0.0, 0.0, 0.0, ...      1    10   \n",
-       "...                                                 ...    ...   ...   \n",
-       "5880  [-0.3975757616807607, 0.0, 0.0, 0.0, -0.520186...      0     9   \n",
-       "5881  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0.0,...      1     9   \n",
-       "5882  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...      1     1   \n",
-       "5883  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0,...      1     5   \n",
-       "5884  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -0.72...      0     6   \n",
-       "\n",
-       "                                      date_section_mean  \\\n",
-       "0     [-0.20229081641970367, -0.3151150390251947, -0...   \n",
-       "1     [-0.20229081641970367, -0.3151150390251947, -0...   \n",
-       "2     [-0.20229081641970367, -0.3151150390251947, -0...   \n",
-       "3     [-0.20229081641970367, -0.3151150390251947, -0...   \n",
-       "4     [-0.20229081641970367, -0.3151150390251947, -0...   \n",
-       "...                                                 ...   \n",
-       "5880  [-0.006774948725900236, 0.0, 0.077411826324159...   \n",
-       "5881  [-0.006774948725900236, 0.0, 0.077411826324159...   \n",
-       "5882  [-0.006774948725900236, 0.0, 0.077411826324159...   \n",
-       "5883  [-0.006774948725900236, 0.0, 0.077411826324159...   \n",
-       "5884  [-0.006774948725900236, 0.0, 0.077411826324159...   \n",
-       "\n",
-       "                                       date_section_std  \\\n",
-       "0     [1.0949212859056963, 0.9475574203939641, 0.180...   \n",
-       "1     [1.0949212859056963, 0.9475574203939641, 0.180...   \n",
-       "2     [1.0949212859056963, 0.9475574203939641, 0.180...   \n",
-       "3     [1.0949212859056963, 0.9475574203939641, 0.180...   \n",
-       "4     [1.0949212859056963, 0.9475574203939641, 0.180...   \n",
-       "...                                                 ...   \n",
-       "5880  [0.13957653573688994, 0.0, 0.19901225947274961...   \n",
-       "5881  [0.13957653573688994, 0.0, 0.19901225947274961...   \n",
-       "5882  [0.13957653573688994, 0.0, 0.19901225947274961...   \n",
-       "5883  [0.13957653573688994, 0.0, 0.19901225947274961...   \n",
-       "5884  [0.13957653573688994, 0.0, 0.19901225947274961...   \n",
-       "\n",
-       "                                             norm_svect  \n",
-       "0     [0.1847537526429335, 0.3325550855737903, 0.141...  \n",
-       "1     [0.09744650652736749, 1.7396817721855375, 0.14...  \n",
-       "2     [1.2402983497002373, 0.3325550855737903, 1.638...  \n",
-       "3     [-0.18309035370377583, 0.8317414151279248, 0.1...  \n",
-       "4     [0.1847537526429335, -2.778649275464914, 0.141...  \n",
-       "...                                                 ...  \n",
-       "5880  [-2.7999033712338526, 0.0, -0.3889801891061880...  \n",
-       "5881  [0.04853930992148578, 0.0, -0.3889801891061880...  \n",
-       "5882  [0.04853930992148578, 0.0, -0.3889801891061880...  \n",
-       "5883  [0.04853930992148578, 0.0, -0.3889801891061880...  \n",
-       "5884  [0.04853930992148578, 0.0, -0.3889801891061880...  \n",
-       "\n",
-       "[5885 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 178,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mfdff"
+    "mfdff['use'] = mfdff['sent'] >= 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
