keeping fomc covariates

--- a/stance-vectors/stance_vector.ipynb
+++ b/stance-vectors/stance_vector.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,37 +95,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Economic activity in the Eighth District has been improving at a moderate pace during the intermeeting period.\n",
-      "[(21, 0.0483)]\n",
-      "For example, I've maintained my forecast for 2013 and 2014 at about 3 percent, and I believe that looking at the horizon of 18 months to two years is a better horizon for which policy ought to be judged, and ought to be the relevant metric we should look at.\n",
-      "[(13, 0.037), (44, 0.0344)]\n",
-      "You will recall that in 1992 the Swedes tried to curb a run on their exchange rate by raising their overnight interest rate to 500 percent.\n",
-      "[(8, 0.0357), (37, 0.0402), (38, 0.0387)]\n",
-      "I take more signal about the underlying strength of the economy from the improvement in labor market conditions, which has exceeded the expectations of many economists.\n",
-      "[(36, 0.0377)]\n",
-      "Turning to the inflation outlook for the immediate future, I think the most likely outcome is for stable or even slightly lower core inflation this year.\n",
-      "[(34, 0.0502), (39, 0.031)]\n",
-      "For now, I lean toward the view that low inflation is transitory, with the signal from recent readings blurred by declines in a few components.\n",
-      "[(30, 0.0308), (43, 0.0316)]\n",
-      "I think we do need to be sensitive to the possibility of overshooting, and here I would endorse President Hoenig's comments on that.\n",
-      "[(37, 0.0338)]\n",
-      "One is the valuation risk:  All of a sudden people realized that they didn't know as much about what kind of assets were in portfolios and how complicated the structures were in terms of those assets.\n",
-      "[(10, 0.0325), (12, 0.0324), (22, 0.0462)]\n",
-      "European sovereign banking problems have created significant uncertainties, and these problems could be transmitted to the United States via money market funds, domestic banks, or changes in risk aversion.\n",
-      "[(11, 0.0353), (18, 0.051), (35, 0.056)]\n",
-      "So, for now, this is really a bubble theory of inflation, as I think about it.\n",
-      "[(6, 0.0313), (19, 0.032)]\n",
-      "So far, the charge-off rates in 2009 on nonfarm, nonresidential mortgages ran about 1 percent, which is actually just half of the 2 percent charge- off rate on residential mortgages or C&I loans and a fraction of the more than 5 percent charge- off rate on construction loans.\n",
-      "[(22, 0.1676)]\n",
-      "I wouldn't propose that as long as you are the Chair, but I suspect we may at some point want to spend more time together as we go forward.\n",
-      "[(8, 0.0309)]\n"
+      "Recent core inflation numbers have been favorable, and most of you see continued moderation in inflation resulting from mildly restrictive policy, the ending of some temporary influences, and slower increases in shelter costs.\n",
+      "[(34, 0.0862)]\n",
+      "Of course, we've been forecasting an acceleration of inflation for a while and core inflation has continued to edge down.\n",
+      "[(34, 0.036)]\n",
+      "Assuming the earned income tax credit is already phased out, families of four earning between $20,000 and $50,000 would have marginal tax rates of around 49 percent.\n",
+      "[(22, 0.0594), (37, 0.0363), (41, 0.031)]\n",
+      "Our manufacturing index popped up to 22 in March after a long stretch of neutral readings.\n",
+      "[(21, 0.0344), (37, 0.0315)]\n",
+      "As always, it's very difficult to add intelligent new and insightful ideas after all of you have already spoken, but let me just say a couple things.\n",
+      "[(18, 0.0436)]\n",
+      "He noted that a lot of the volume is driven by sales over the Internet and by phone sales for holiday season packages.\n",
+      "[(17, 0.1), (38, 0.031)]\n",
+      "And to the downside: protectionist trade policies, restrictionist immigration policies.\n",
+      "[(10, 0.0562)]\n",
+      "President Minehan.\n",
+      "[(37, 0.041)]\n",
+      "Finally, while I still think a 50 basis point move is the better move, in this case a quarter of a loaf is better than none.\n",
+      "[(2, 0.0566), (44, 0.0301)]\n",
+      "As I said yesterday, the balance of evidence suggests to me that our asset purchases initiated last November contributed to the rise in inflation, but had little or no effect on real growth.\n",
+      "[(23, 0.0409), (34, 0.0309)]\n",
+      "Moreover, reports have been increasing of related layoffs at District suppliers of auto parts such as engines, transmissions, brake systems, exhaust systems, and electrical systems.\n",
+      "[(1, 0.0404), (5, 0.0485), (35, 0.0429)]\n",
+      "In support of this increased activity, the external financing cost of capital has been relatively low.\n",
+      "[(22, 0.0328)]\n",
+      "What are the risks that we might face if we undertake this program?\n",
+      "[(23, 0.0349)]\n"
      ]
     }
    ],
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +477,7 @@
        "[79938 rows x 11 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +940,7 @@
        "[79938 rows x 22 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,26 +951,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mfdff = fdff.groupby(['date_x', 'section', 'lname'])[['svect', 'voter', 'sent']].agg({'svect': 'sum', 'voter': 'max', 'sent': 'count'}).reset_index()"
+    "mfdff = fdff.groupby(['date_x', 'section', 'lname'])[['svect', 'voter', 'sent', 'region', 'female', 'chair', 'exp']].agg({'svect': 'sum', 'voter': 'max', 'sent': 'count', 'region': 'first', 'female': 'first', 'chair': 'first', 'exp':'first'}).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['date_x', 'section', 'lname', 'svect', 'voter', 'sent', 'region',\n",
+       "       'female', 'chair', 'exp'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def func(ins):\n",
-    "    print(ins)"
+    "mfdff.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
