Exploring who the female members were in the early 2000s

--- a/regressions/descriptive_stats.ipynb
+++ b/regressions/descriptive_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "65"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,13 +65,59 @@
        "Name: lname, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.groupby('region')['lname'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['date'] = pd.to_datetime(df['date_x'])\n",
+    "df['year'] = df['date'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year  lname   \n",
+       "1999  minehan     13\n",
+       "      rivlin       5\n",
+       "2000  minehan     14\n",
+       "2001  bies         1\n",
+       "      minehan     13\n",
+       "2002  bies        12\n",
+       "      minehan     13\n",
+       "2003  bies        11\n",
+       "      minehan     13\n",
+       "      pianalto     9\n",
+       "2004  bies        10\n",
+       "      holcomb      2\n",
+       "      minehan     14\n",
+       "      pianalto    11\n",
+       "      yellen       7\n",
+       "Name: lname, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df['female'] == True) & (df['year'] < 2005) & (df['year'] > 1998)].groupby(['year', 'lname'])['lname'].agg('count')"
    ]
   },
   {
